unpackaged/main/default/objects/psamsp__Project_Lookup_Filter_Setting__c/psamsp__Project_Lookup_Filter_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to set Region filter for MS Project Import Project Lookup.</description>
    <label>Project Lookup Filter Setting</label>
</CustomObject>