unpackaged/main/default/objects/psamsp__Project_Lookup_Filter_Setting__c/fields/psamsp__Group__c.field-meta.xml
<CustomField>
    <fullName>psamsp__Group__c</fullName>
    <description>Name of group that will be used as filter on Custom Project Lookup to get searched projects,</description>
    <inlineHelpText>Name of group that will be used as filter on Custom Project Lookup to get searched projects,</inlineHelpText>
    <label>Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>