unpackaged/main/default/objects/psamsp__Project_Lookup_Filter_Setting__c/fields/psamsp__Practice__c.field-meta.xml
<CustomField>
    <fullName>psamsp__Practice__c</fullName>
    <description>Name of practice that will be used as filter on Custom Project Lookup to get searched projects,</description>
    <inlineHelpText>Name of practice that will be used as filter on Custom Project Lookup to get searched projects,</inlineHelpText>
    <label>Practice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>