unpackaged/main/default/objects/psamsp__Project_Lookup_Filter_Setting__c/fields/psamsp__Region_Name__c.field-meta.xml
<CustomField>
    <fullName>psamsp__Region_Name__c</fullName>
    <description>Name of region that will be used as filter on Custom Project Lookup to get searched projects,</description>
    <inlineHelpText>Name of region that will be used as filter on Custom Project Lookup to get searched projects,</inlineHelpText>
    <label>Region Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>